welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:5: error: reassignment to val
	nbPas = nbPas + 1
              ^Program:9: error: reassignment to val
		nbPas = nbPas - 1
                      ^Program:12: error: reassignment to val
		if (nbPas=0)
                         ^